--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="blue">#2D79E9</color>
+    <color name="yellow">#E9B749</color>
+    <color name="green">#84D396</color>
+    <color name="orange">#E5895A</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="grey1">#F7F7F7</color>
+    <color name="grey2">#EFEFEF</color>
+    <color name="grey3">#E1E1E1</color>
+    <color name="grey4">#D1D1D1</color>
+    <color name="grey5">#BABABA</color>
+    <color name="grey6">#A5A5A5</color>
+    <color name="grey7">#989898</color>
+    <color name="grey8">#8A8A8A</color>
+    <color name="grey9">#6B6B6B</color>
+    <color name="grey10">#5B5B5B</color>
+    <color name="grey11">#4A4A4A</color>
+    <color name="grey12">#383838</color>
+    <color name="grey13">#1D1D1D</color>
 </resources>
