--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,8 +48,7 @@
         app:layout_constraintTop_toBottomOf="@id/addNewLetterBtn"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        t>
+        android:layout_marginTop="32dp">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
